# Prometheus-CLI

./: .gitignore  INSTALL.md  README.md  apply_changes.py  check_file.py  check_indent.py  debug_init.py  install.ps1  install.sh  prometheus  prometheus.ps1  test_repo_names.py  test_shorthand_feature.py  test_validation.py
.github/: copilot-instructions.md
.github/workflows/: python-build.yml
docs/: APP_INITIALIZATION.md  CLI_GUIDE.md  INSTALLATION.md  PUSH_UPDATE_COMMANDS.md
tools/cli/: BUILD_PYTHON.md  PYTHON_MIGRATION.md  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
tools/cli/src/prometheus/: __init__.py  context.py  main.py  pull.py  push.py  update.py  version.py
tools/cli/src/prometheus/cli/: __init__.py  commands.py
tools/cli/src/prometheus/config/: __init__.py  config.py
tools/cli/src/prometheus/github/: __init__.py  api.py
tools/cli/src/prometheus/init/: __init__.py  workflow.py
tools/cli/src/prometheus/language/: __init__.py  detection.py
tools/cli/src/prometheus/materialize/: __init__.py  materialize.py
tools/cli/src/prometheus/submodule/: __init__.py  detection.py
tools/cli/src/prometheus/symlink/: __init__.py  symlink.py
tools/cli/src/prometheus/validate/: __init__.py  validate.py
tools/cli/tests/: __init__.py  conftest.py  test_commands.py  test_config.py  test_context.py  test_github.py  test_init.py  test_language.py  test_materialize.py  test_pull.py  test_push.py  test_submodule_detection.py  test_update.py
